--- a/playing/lucene/build.gradle
+++ b/playing/lucene/build.gradle
@@ -7,5 +7,6 @@ mainClassName = "EntryPoint"
 
 dependencies {
     implementation group: 'org.apache.lucene', name: 'lucene-core', version: '8.3.0'
+    implementation group: 'org.apache.lucene', name: 'lucene-queryparser', version: '8.3.0'
 }
 
