Finished integrating with gradle

--- a/playing/kafka/build.gradle
+++ b/playing/kafka/build.gradle
@@ -5,6 +5,10 @@ plugins {
 
 mainClassName = 'EntryPoint'
 
+run {
+    standardInput = System.in
+}
+
 dependencies {
     implementation group: 'org.apache.kafka', name: 'kafka_2.12', version: '2.3.1'
 }
