--- a/settings.gradle
+++ b/settings.gradle
@@ -20,3 +20,5 @@ include 'playing:kafka'
 include 'playing:lucene'
 include 'playing:psql'
 
+include 'simple_olep:storage_systems:psql', 'simple_olep:storage_systems:lucene'
+include 'simepl_olep:storage_api'
