--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # Mine
 **/luceneindex
-
+/playing/*/build
+**/build
 
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and WebStorm
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
@@ -102,8 +103,6 @@ hs_err_pid*
 .gradle
 /build/
 
-
-/playing/*/build
 
 
 # Ignore Gradle GUI config
