--- a/build.gradle
+++ b/build.gradle
@@ -23,14 +23,12 @@ dependencies {
 }
 */
 
-subprojects {
-    // In this section you declare where to find the dependencies of your project
+allprojects {
     repositories {
-        // Use 'jcenter' for resolving your dependencies.
-        // You can declare any Maven/Ivy/file repository here.
         jcenter()
     }
 }
 
-
-
+subprojects {
+    version = '1.0'
+}
