--- a/storage_systems/lucene/build.gradle
+++ b/storage_systems/lucene/build.gradle
@@ -11,5 +11,8 @@ run {
 dependencies {
     implementation group: 'org.apache.lucene', name: 'lucene-core', version: '8.3.0'
     implementation group: 'org.apache.lucene', name: 'lucene-queryparser', version: '8.3.0'
-}
 
+    implementation group: 'org.apache.kafka', name: 'kafka_2.12', version: '2.3.1'
+
+    implementation project(path: ':common')
+}
