--- a/common/build.gradle
+++ b/common/build.gradle
@@ -4,4 +4,6 @@ plugins {
 
 dependencies {
     implementation group: 'org.apache.kafka', name: 'kafka_2.12', version: '2.3.1'
+    implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
+
 }
