--- a/storage_api/build.gradle
+++ b/storage_api/build.gradle
@@ -8,4 +8,5 @@ mainClassName = 'EntryPoint'
 dependencies {
     implementation project(':common')
     implementation group: 'org.apache.kafka', name: 'kafka_2.12', version: '2.3.1'
+    implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
 }
