--- a/storage_systems/lucene/build.gradle
+++ b/storage_systems/lucene/build.gradle
@@ -13,6 +13,7 @@ dependencies {
     implementation group: 'org.apache.lucene', name: 'lucene-queryparser', version: '8.3.0'
 
     implementation group: 'org.apache.kafka', name: 'kafka_2.12', version: '2.3.1'
+    implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
 
     implementation project(path: ':common')
 }
