--- a/storage_systems/psql/build.gradle
+++ b/storage_systems/psql/build.gradle
@@ -16,4 +16,6 @@ dependencies {
     implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
 
     implementation project(path: ':common')
+
+    implementation group: 'postgresql', name: 'postgresql', version: '9.1-901-1.jdbc4'
 }
