--- a/simple_olep/storage_systems/psql/build.gradle
+++ b/simple_olep/storage_systems/psql/build.gradle
@@ -15,7 +15,7 @@ dependencies {
     implementation group: 'org.apache.kafka', name: 'kafka_2.12', version: '2.3.1'
     implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
 
-    implementation project(path: ':common')
+    implementation project(path: ':simple_olep:common')
 
     implementation group: 'postgresql', name: 'postgresql', version: '9.1-901-1.jdbc4'
 }
