--- a/settings.gradle
+++ b/settings.gradle
@@ -26,4 +26,4 @@ include 'simple_olep:common'
 include 'simple_olep:storage_systems:psql'
 include 'simple_olep:storage_systems:lucene'
 include 'simple_olep:storage_api'
-
+include 'simple_olep:message_app'
