--- a/settings.gradle
+++ b/settings.gradle
@@ -27,3 +27,10 @@ include 'simple_olep:storage_systems:psql'
 include 'simple_olep:storage_systems:lucene'
 include 'simple_olep:storage_api'
 include 'simple_olep:message_app'
+
+include 'ser_reads'
+include 'ser_reads:common'
+include 'ser_reads:storage_systems:psql'
+include 'ser_reads:storage_systems:lucene'
+include 'ser_reads:storage_api'
+include 'ser_reads:message_app'
