--- a/ser_reads/build.gradle
+++ b/ser_reads/build.gradle
@@ -4,13 +4,15 @@ plugins {
 
 dependencies {
     testImplementation 'junit:junit:4.12'
-    implementation group: 'org.apache.kafka', name: 'kafka_2.12', version: '2.3.1'
     testImplementation group: 'org.mockito', name: 'mockito-core', version: '3.1.0'
     testImplementation group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
+
+    implementation group: 'org.apache.kafka', name: 'kafka_2.12', version: '2.3.1'
 
     implementation project(':ser_reads:common')
     implementation project(':ser_reads:storage_systems:lucene')
     implementation project(':ser_reads:storage_systems:psql')
+    implementation project(':ser_reads:storage_api')
 }
 
 test {
