--- a/settings.gradle
+++ b/settings.gradle
@@ -34,3 +34,10 @@ include 'ser_reads:storage_systems:psql'
 include 'ser_reads:storage_systems:lucene'
 include 'ser_reads:storage_api'
 include 'ser_reads:message_app'
+
+include 'sd_request'
+include 'sd_request:common'
+include 'sd_request:storage_systems:psql'
+include 'sd_request:storage_systems:lucene'
+include 'sd_request:storage_api'
+include 'sd_request:message_app'
