Added a new dir and modified build

--- a/settings.gradle
+++ b/settings.gradle
@@ -41,3 +41,10 @@ include 'sd_request:storage_systems:psql'
 include 'sd_request:storage_systems:lucene'
 include 'sd_request:storage_api'
 include 'sd_request:message_app'
+
+include 'sd_req_sesh'
+include 'sd_req_sesh:common'
+include 'sd_req_sesh:storage_systems:psql'
+include 'sd_req_sesh:storage_systems:lucene'
+include 'sd_req_sesh:storage_api'
+include 'sd_req_sesh:message_app'
