--- a/settings.gradle
+++ b/settings.gradle
@@ -48,3 +48,10 @@ include 'sd_req_sesh:storage_systems:psql'
 include 'sd_req_sesh:storage_systems:lucene'
 include 'sd_req_sesh:storage_api'
 include 'sd_req_sesh:message_app'
+
+include 'concur_reads'
+include 'concur_reads:common'
+include 'concur_reads:storage_systems:psql'
+include 'concur_reads:storage_systems:lucene'
+include 'concur_reads:storage_api'
+include 'concur_reads:message_app'
