--- a/sd_req_sesh/build.gradle
+++ b/sd_req_sesh/build.gradle
@@ -7,7 +7,7 @@ dependencies {
     testImplementation group: 'org.mockito', name: 'mockito-core', version: '3.1.0'
     testImplementation group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
 
-    implementation group: 'org.apache.kafka', name: 'kafka_2.12', version: '2.3.1'
+    api group: 'org.apache.kafka', name: 'kafka_2.12', version: '2.3.1'
 
     api project(':sd_req_sesh:common')
     api project(':sd_req_sesh:storage_systems:lucene')
