--- a/settings.gradle
+++ b/settings.gradle
@@ -69,5 +69,6 @@ include 'new_design:storage_systems:psql'
 include 'new_design:storage_systems:lucene'
 include 'new_design:storage_api'
 include 'new_design:message_app'
+include 'new_design:benchmarking'
 
 include 'benchmarking'
