--- a/new_design/benchmarking/build.gradle
+++ b/new_design/benchmarking/build.gradle
@@ -8,16 +8,15 @@ dependencies {
     testImplementation group: 'org.mockito', name: 'mockito-core', version: '3.1.0'
     testImplementation group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
 
-    api group: 'org.apache.kafka', name: 'kafka_2.12', version: '2.3.1'
+    implementation group: 'org.apache.kafka', name: 'kafka_2.12', version: '2.3.1'
 
     implementation group: 'org.apache.lucene', name: 'lucene-core', version: '8.3.0'
     implementation group: 'org.apache.lucene', name: 'lucene-queryparser', version: '8.3.0'
 
-
-    api project(':new_design:common')
-    api project(':new_design:storage_systems:lucene')
-    api project(':new_design:storage_systems:psql')
-    api project(':new_design:storage_api')
+    implementation project(':new_design:common')
+    implementation project(':new_design:storage_api')
+    implementation project(':new_design:storage_systems:lucene')
+    implementation project(':new_design:storage_systems:psql')
 }
 
 test {
