--- a/new_design/storage_systems/psql/build.gradle
+++ b/new_design/storage_systems/psql/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'java'
     id 'application'
+    id 'com.github.johnrengelman.shadow' version '5.2.0'
 }
 
 mainClassName = "PsqlEntryPoint"
@@ -9,15 +10,13 @@ run {
 }
 
 dependencies {
-    implementation group: 'org.apache.lucene', name: 'lucene-core', version: '8.3.0'
-    implementation group: 'org.apache.lucene', name: 'lucene-queryparser', version: '8.3.0'
-
+    implementation group: 'org.postgresql', name: 'postgresql', version: '42.2.9'
     implementation group: 'org.apache.kafka', name: 'kafka_2.12', version: '2.3.1'
     implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
 
     implementation project(path: ':new_design:common')
 
-    implementation group: 'org.postgresql', name: 'postgresql', version: '42.2.9'
+    implementation group: 'commons-cli', name: 'commons-cli', version: '1.4'
 
     testImplementation 'junit:junit:4.12'
 }
