--- a/new_design/common/build.gradle
+++ b/new_design/common/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id 'java-library'
 }
 
 dependencies {
@@ -7,6 +8,10 @@ dependencies {
     implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
 
     testImplementation 'junit:junit:4.12'
+
+    // Metrics
+    api group: 'io.dropwizard.metrics', name: 'metrics-core', version: '4.1.5'
+    api group: 'io.dropwizard.metrics', name: 'metrics-graphite', version: '4.1.5'
 
     // TODO: Remove
 //    implementation project(':new_design:storage_systems:lucene')
