No opening of sessions is faster but it's 5 am so bye

--- a/new_design/common/build.gradle
+++ b/new_design/common/build.gradle
@@ -13,12 +13,7 @@ dependencies {
     api group: 'io.dropwizard.metrics', name: 'metrics-core', version: '4.1.5'
     api group: 'io.dropwizard.metrics', name: 'metrics-graphite', version: '4.1.5'
 
-    // TODO: Remove
-//    implementation project(':new_design:storage_systems:lucene')
-//    implementation project(':new_design:storage_systems:psql')
-
-//    implementation group: 'org.slf4j', name: 'slf4j-api', version: '1.7.29'
-//    implementation group: 'org.slf4j', name: 'slf4j-simple', version: '1.7.29'
+    api group: 'io.vavr', name: 'vavr', version: '0.10.2'
 }
 
 test {
