Further split things up

--- a/settings.gradle
+++ b/settings.gradle
@@ -17,58 +17,16 @@ include 'services:webservice'
 
 rootProject.name = 'part-ii-project'
 
-include 'playing:kafka'
-include 'playing:lucene'
-include 'playing:psql'
-
-include 'simple_olep'
-include 'simple_olep:common'
-include 'simple_olep:storage_systems:psql'
-include 'simple_olep:storage_systems:lucene'
-include 'simple_olep:storage_api'
-include 'simple_olep:message_app'
-
-include 'ser_reads'
-include 'ser_reads:common'
-include 'ser_reads:storage_systems:psql'
-include 'ser_reads:storage_systems:lucene'
-include 'ser_reads:storage_api'
-include 'ser_reads:message_app'
-
-include 'sd_request'
-include 'sd_request:common'
-include 'sd_request:storage_systems:psql'
-include 'sd_request:storage_systems:lucene'
-include 'sd_request:storage_api'
-include 'sd_request:message_app'
-
-include 'sd_req_sesh'
-include 'sd_req_sesh:common'
-include 'sd_req_sesh:storage_systems:psql'
-include 'sd_req_sesh:storage_systems:lucene'
-include 'sd_req_sesh:storage_api'
-include 'sd_req_sesh:message_app'
-
-include 'concur_reads'
-include 'concur_reads:common'
-include 'concur_reads:storage_systems:psql'
-include 'concur_reads:storage_systems:lucene'
-include 'concur_reads:storage_api'
-include 'concur_reads:message_app'
-
-include 'everything'
-include 'everything:common'
-include 'everything:storage_systems:psql'
-include 'everything:storage_systems:lucene'
-include 'everything:storage_api'
-include 'everything:message_app'
-
 include 'new_design'
 include 'new_design:common'
-include 'new_design:storage_systems:psql'
-include 'new_design:storage_systems:lucene'
-include 'new_design:storage_api'
-include 'new_design:message_app'
-include 'new_design:benchmarking'
+include 'new_design:common:metrics'
+
+
+include 'message_app'
+include 'message_app:common'
+include 'message_app:storage_systems:psql'
+include 'message_app:storage_systems:lucene'
+include 'message_app:storage_api'
+include 'message_app:message_app'
 
 include 'benchmarking'
