--- a/message_app/storage_systems/vavr/build.gradle
+++ b/message_app/storage_systems/vavr/build.gradle
@@ -5,6 +5,7 @@ plugins {
 dependencies {
     implementation project(':message_app:common')
     implementation project(path: ':new_design:common')
+    implementation group: 'org.apache.kafka', name: 'kafka_2.12', version: '2.3.1'
 
     implementation group: 'io.vavr', name: 'vavr', version: '0.10.2'
     testImplementation 'junit:junit:4.12'
