--- a/benchmarking/build.gradle
+++ b/benchmarking/build.gradle
@@ -13,6 +13,8 @@ dependencies {
     implementation group: 'org.apache.lucene', name: 'lucene-core', version: '8.3.0'
     implementation group: 'org.apache.lucene', name: 'lucene-queryparser', version: '8.3.0'
 
+    implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
+
     implementation project(':new_design:common')
 
     implementation project(':message_app:common')
