--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 **/luceneindex
 /playing/*/build
 **/build
-dontgitme**
+dontgitme/**
 
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and WebStorm
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
