--- a/benchmarking/build.gradle
+++ b/benchmarking/build.gradle
@@ -15,10 +15,9 @@ dependencies {
 
     implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
 
-    implementation project(':new_design:common')
+    implementation project(':olep_framework')
 
     implementation project(':message_app:common')
-    implementation project(':message_app:storage_api')
     implementation project(':message_app:storage_systems:lucene')
     implementation project(':message_app:storage_systems:psql')
     implementation project(':message_app:storage_systems:vavr')
