--- a/message_app/build.gradle
+++ b/message_app/build.gradle
@@ -10,13 +10,12 @@ tasks.test {
 dependencies {
     testImplementation 'junit:junit:4.12'
     testImplementation group: 'org.apache.kafka', name: 'kafka_2.12', version: '2.3.1'
-    api project(':new_design:common')
+    api project(':olep_framework')
 
     api project(':message_app:common')
     api project(':message_app:storage_systems:psql')
     api project(':message_app:storage_systems:lucene')
     api project(':message_app:storage_systems:vavr')
-    api project(':message_app:storage_api')
 
     implementation group: 'org.apache.lucene', name: 'lucene-core', version: '8.3.0'
     implementation group: 'org.apache.lucene', name: 'lucene-queryparser', version: '8.3.0'
