--- a/message_app/common/build.gradle
+++ b/message_app/common/build.gradle
@@ -5,7 +5,7 @@ plugins {
 
 dependencies {
     testImplementation 'junit:junit:4.12'
-    implementation project(':new_design:common')
+    implementation project(':olep_framework')
     implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
 }
 
