--- a/message_app/storage_systems/psql/build.gradle
+++ b/message_app/storage_systems/psql/build.gradle
@@ -15,7 +15,7 @@ dependencies {
     implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
 
     implementation project(':message_app:common')
-    implementation project(path: ':new_design:common')
+    implementation project(path: ':olep_framework')
 
     implementation group: 'commons-cli', name: 'commons-cli', version: '1.4'
 
