--- a/message_app/storage_systems/vavr/build.gradle
+++ b/message_app/storage_systems/vavr/build.gradle
@@ -4,7 +4,7 @@ plugins {
 
 dependencies {
     implementation project(':message_app:common')
-    implementation project(path: ':new_design:common')
+    implementation project(path: ':olep_framework')
     implementation group: 'org.apache.kafka', name: 'kafka_2.12', version: '2.3.1'
 
     implementation group: 'io.vavr', name: 'vavr', version: '0.10.2'
