--- a/olep_framework/build.gradle
+++ b/olep_framework/build.gradle
@@ -10,7 +10,18 @@ dependencies {
 
     api group: 'org.apache.kafka', name: 'kafka_2.12', version: '2.3.1'
 
-    api project(':new_design:common')
+    api project(':olep_framework')
+
+    implementation group: 'org.apache.kafka', name: 'kafka_2.12', version: '2.3.1'
+    implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
+
+    testImplementation 'junit:junit:4.12'
+
+    // Metrics
+    api group: 'io.dropwizard.metrics', name: 'metrics-core', version: '4.1.5'
+    api group: 'io.dropwizard.metrics', name: 'metrics-graphite', version: '4.1.5'
+
+    api group: 'io.vavr', name: 'vavr', version: '0.10.2'
 }
 
 test {
